# meta-learning-flame

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.ini  requirements.txt  setup.py  template.py
.github/workflows/: defender-for-devops.yml  docker-image.yml  pre-commit.yml
docs/: sources.md
docs/Dataset/: data_orch.md
research/: trials.ipynb
src/flameAI/components/: data_ingestion.py  data_loaders.py  data_mmd.py  data_transformation.py  data_wrapper.py
src/flameAI/utils/: common.py
tests/test_data/: test_data_loaders.py
